fix anchor navigation gap with sticky header

--- a/src/app/containers/index/index.component.scss
+++ b/src/app/containers/index/index.component.scss
@@ -28,3 +28,9 @@
     padding-bottom: pxToRem($space-sm);
   }
 }
+
+::ng-deep {
+  .anchor-nav__helper {
+    margin-top: pxToRem(-$space-md);
+  }
+}
